--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,15 @@
 <head>
   <meta charset='utf-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no' />
-  <link rel='icon' type='image/png' sizes='96x96' href='./media/meta/favicon.png' />
+
+  <link rel="icon" href="{{baseurl}}/meta/favicon.png" type='image/png' sizes="32x32">
+  <link rel="icon" href="{{baseurl}}/meta/icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="{{baseurl}}/meta/apple-touch-icon.png">
+  <link rel="manifest" href="{{baseurl}}/meta/manifest.webmanifest">
+
+  <meta property="og:image" content='{{baseurl}}/meta/meta-image.png'>
+  <meta name="twitter:image" content='{{baseurl}}/meta/meta-image.png'>
+  <meta property='og:url' content='{{baseurl}}'>
 
   <title>{{appTitle}}</title>
   <meta name='description' content='{{appDescription}}' />
